made documentation for Api endpoints
